Fix scrollbar setting

--- a/scripts/style.less
+++ b/scripts/style.less
@@ -225,7 +225,7 @@ body > div > div
 
 			div
 			{
-				overflow-y: scroll;
+				overflow-y: auto;
 				max-height: 165px;
 
 				table
